fix horizontal scroll for phone

--- a/_css/rob-wood-floor.css
+++ b/_css/rob-wood-floor.css
@@ -346,6 +346,9 @@ nav a:hover:before {
   .description {
     width: 380px;
   }
+  html, body {
+    overflow-x: hidden;
+  }
 }
 
 @media screen and (max-width:900px) {
@@ -375,6 +378,9 @@ nav a:hover:before {
   .description {
     width: 380px;
   }
+  html, body {
+    overflow-x: hidden;
+  }
 }
 
 @media screen and (max-width:380px) {
@@ -385,9 +391,11 @@ nav a:hover:before {
     height: 250px;
   }
   .description {
-    width: 100%;
-    margin-right: 10px;
-    padding-left: 10px;
+    width: 340px;
+    margin-left: 10px;
+  }
+  html, body {
+    overflow-x: hidden;
   }
 }
 
